--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 style="cursor: pointer"
               >
                 <i class="fas fa-award"></i>
-                Achivements
+                Achievements
               </p>
             </h2>
 
@@ -201,7 +201,7 @@
                   >
                 </h4>
                 <p class="markdownify">
-                  Recognized for SXD 4WIN as 2nd Place Winner in the PUBG Central Java Export UNS competition, organized by Export UNS 2019 in Surakarta on November 2, 2019.
+                  Recognized for SXD 4 Win as 2nd Place Winner in the PUBG Central Java Export UNS competition, organized by Export UNS 2019 in Surakarta on November 2, 2019.
                 </p>
               </div>
             </div>
