--- a/index.html
+++ b/index.html
@@ -168,6 +168,15 @@
             <div class="panel overflow-hidden px-2 ml-2">
               <div class="">
                 <h4>
+                  <a
+                    href="https://drive.google.com/drive/folders/1Sst0gBD5-7y26ZGw0PgRsD39kbbZZhEO"
+                    >Most Outstanding Student – Rakamin Academy (Data Science Specialization Bootcamp)</a
+                  >
+                </h4>
+                <p class="markdownify">
+                  Recognized as the Most Outstanding Student of Bootcamp, the Most Outstanding Student of the Final Project, and the Best Group of Final Project in Rakamin Academy Data Science Specialization Bootcamp Batch 55.
+                </p>
+                <h4>
                   <a href="https://drive.google.com/file/d/1cueaQPVutdOVRUa8btGpO0kwvcu0lzC0/view"
                     >Milenial Class & Bootcamp Certification</a
                   >
