--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   >
                 </h4>
                 <p class="markdownify">
-                  Awarded recognition for runner up in the Indonesian Junior High School E-Sports League JD.ID HSL PUBG Mobile 2019 Season 2, representing SMK 2 Surakarta as the 2nd Champion.
+                  Initiated and led 3 out of 4 team members, and was awarded recognition for achieving Runner-Up in the Indonesian Junior High School E-Sports League JD.ID HSL PUBG Mobile Season 2 (2019), representing SMK 2 Surakarta.
                 </p>
                 <h4>
                   <a
@@ -210,7 +210,7 @@
                   >
                 </h4>
                 <p class="markdownify">
-                  Recognized for SXD 4 Win as 2nd Place Winner in the PUBG Central Java Export UNS competition, organized by Export UNS 2019 in Surakarta on November 2, 2019.
+                  Led 3 out of 4 team members and was recognized for securing 2nd Place with SXD 4 Win in the PUBG Mobile Central Java Export UNS Competition, held in Surakarta on November 2, 2019, organized by Export UNS.
                 </p>
               </div>
             </div>
