--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   >
                 </h4>
                 <p class="markdownify">
-                  Recognized as the Most Outstanding Student of Bootcamp, the Most Outstanding Student of the Final Project, and the Best Group of Final Project in Rakamin Academy Data Science Specialization Bootcamp Batch 55.
+                  Led a team of 3 to develop models predicting hiring decisions. Recognized as the Most Outstanding Student of Bootcamp, the Most Outstanding Student of the Final Project, and the Best Group of Final Project in Rakamin Academy Data Science Specialization Bootcamp Batch 55.
                 </p>
                 <h4>
                   <a href="https://drive.google.com/file/d/1cueaQPVutdOVRUa8btGpO0kwvcu0lzC0/view"
