--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Home</title>
 
-    <meta name="theme-color" content="" />
+    <meta name="theme-color" content="The official website of Aziz Prabowo - Data Scientist, Reverse Engineer." />
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
